[package]
authors = ["Hoon Wee <mrgravity817@gmail.com>"]
edition = "2021"
name = "mailcrab"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "mailcrab"
path = "src/main.rs"

[dependencies]
actix-web = "4"
chrono = "0.4.15"
claim = "0.5"
config = "0.11"
secrecy = {version = "0.8", features = ["serde"]}
serde = {version = "1", features = ["derive"]}
serde-aux = "3"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
tracing = {version = "0.1", features = ["log"]}
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
uuid = {version = "0.8.1", features = ["v4"]}
unicode-segmentation = "1"

[dev-dependencies]
once_cell = "1"
reqwest = "0.11"

[dependencies.sqlx]
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]
version = "0.5.7"
