[package]
authors = ["Hoon Wee <mrgravity817@gmail.com>"]
edition = "2021"
name = "mailcrab"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "mailcrab"
path = "src/main.rs"

[dependencies]
actix-web = "4"
chrono = "0.4.15"
claim = "0.5"
config = "0.11"
rand = {version = "0.8", features = ["std_rng"]}
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
secrecy = {version = "0.8", features = ["serde"]}
serde = {version = "1", features = ["derive"]}
serde-aux = "3"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
tracing = "0.1"
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
unicode-segmentation = "1"
uuid = {version = "0.8.1", features = ["v4"]}
validator = "0.14"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
fake = "~2.3"
linkify = "0.8"
once_cell = "1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1"
wiremock = "0.5"

[dependencies.sqlx]
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]
version = "0.5.7"
